--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "HackStars!",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "angular": "^1.3.15",
+    "casual": "^1.4.7"
+  }
 }
