--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.3.15",
-    "casual": "^1.4.7"
+    "casual": "^1.4.7",
+    "json-format": "0.0.1"
   }
 }
