--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,11 @@
   "dependencies": {
     "angular": "~1.3.15",
     "bootstrap": "~3.3.4",
-    "d3": "~3.5.5"
+    "d3": "~3.5.5",
+    "angularjs-nvd3-directives": "~0.0.7"
+  },
+  "resolutions": {
+    "angular": "~1.2.4",
+    "d3": "~3.4.1"
   }
 }
