--- a/bower.json
+++ b/bower.json
@@ -14,13 +14,12 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.15",
     "bootstrap": "~3.3.4",
-    "d3": "~3.5.5",
-    "angularjs-nvd3-directives": "~0.0.7"
+    "angularjs-nvd3-directives": "~0.0.7",
+    "angular-nvd3": "~0.1.1"
   },
   "resolutions": {
     "angular": "~1.2.4",
-    "d3": "~3.4.1"
+    "d3": "~3.3.13"
   }
 }
