--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "bootstrap": "~3.3.4",
     "angularjs-nvd3-directives": "~0.0.7",
-    "angular-nvd3": "~0.1.1"
+    "angular-nvd3": "~0.1.1",
+    "angular-ui-router": "~0.2.13"
   },
   "resolutions": {
     "angular": "~1.2.4",
