--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "bootstrap": "~3.3.4",
     "angularjs-nvd3-directives": "~0.0.7",
     "angular-nvd3": "~0.1.1",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "angular-smart-table": "~2.0.2"
   },
   "resolutions": {
     "angular": "~1.2.4",
