--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "angular": "^1.3.15",
     "casual": "^1.4.7",
-    "json-format": "0.0.1"
+    "json-format": "0.0.1",
+    "moment": "^2.10.2"
   }
 }
