--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angularjs-nvd3-directives": "~0.0.7",
     "angular-nvd3": "~0.1.1",
     "angular-ui-router": "~0.2.13",
-    "angular-smart-table": "~2.0.2"
+    "angular-smart-table": "~2.0.2",
+    "font-awesome": "~4.3.0"
   },
   "resolutions": {
     "angular": "~1.2.4",
