--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-nvd3": "~0.1.1",
     "angular-ui-router": "~0.2.13",
     "angular-smart-table": "~2.0.2",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "angular-bootstrap": "git@github.com:angular-ui/bootstrap-bower.git#~0.12.1"
   },
   "resolutions": {
     "angular": "~1.2.4",
